<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    tools:context=".WhereAreYourPlantsActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="53dp"
        android:layout_height="51dp"
        android:layout_margin="16dp"
        android:background="@drawable/gray_back_btn"
        android:contentDescription="@string/logo_desc"
        android:scaleType="centerInside"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/plantImage"
        android:layout_width="317dp"
        android:layout_height="322dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/plant02"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <LinearLayout
        android:id="@+id/dotsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/plantImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="4dp"
            android:background="@drawable/dot_inactive" />

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="4dp"
            android:background="@drawable/dot_active" />

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="4dp"
            android:background="@drawable/dot_inactive" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomSection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/half_gray_background"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/dotsLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/onboard2_title"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboard2_subtitle"
            android:textSize="18sp"
            android:textColor="@color/darkGray"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:id="@+id/containerOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/optionIndoor"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/radio_unselected_bg">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_home"
                    app:tint="@color/limeGreen"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/option_indoor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/limeGreen"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/optionOutdoor"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/radio_unselected_bg">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_outdoor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/option_outdoor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/optionGarden"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/radio_unselected_bg">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/ic_garden" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/option_garden"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnSkip"
                android:layout_width="0dp"
                android:layout_height="67dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/accentGray"
                android:text="@string/btn_skip"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="67dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="#32CD32"
                android:text="@string/btn_next_arrow"
                android:textAllCaps="false"
                android:textColor="@color/backgroundWhite"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
