<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="427dp"
    android:layout_height="952dp"
    android:background="@color/backgroundWhite"
    tools:context=".LeafDropActivity">

    <ImageButton
        android:id="@+id/btnBack03"
        android:layout_width="49dp"
        android:layout_height="51dp"
        android:layout_margin="16dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/gray_back_btn"
        android:contentDescription="@string/logo_desc"
        android:scaleType="centerInside"
        android:src="@drawable/arrow"
        app:layout_constraintBottom_toTopOf="@+id/plantImage"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/hlogo"
        app:layout_constraintBottom_toTopOf="@+id/plantImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/plantImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/onboard_2nd"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="339dp" />

    <LinearLayout
        android:id="@+id/dotsLayout"
        android:layout_width="65dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plantImage">

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="4dp"
            android:background="@drawable/dot_inactive" />

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="4dp"
            android:background="@drawable/dot_inactive" />

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="4dp"
            android:background="@drawable/dot_active" />
    </LinearLayout>

    <TextView
        android:id="@+id/heading"
        android:layout_width="386dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:text="@string/onboard3_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dotsLayout" />

    <TextView
        android:id="@+id/description"
        android:layout_width="427dp"
        android:layout_height="88dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/onboard3_description"
        android:textColor="@color/darkGray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="334dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#32CD32"
        android:drawablePadding="10dp"
        android:text="@string/btn_get_started"
        android:textAllCaps="false"
        android:textColor="@color/backgroundWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

</androidx.constraintlayout.widget.ConstraintLayout>
